<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="intro_titles">
        <item>Track your work.\nIn a new way.</item>
        <item>Create tasks and assign\nthem to colleagues.</item>
        <item>Stay organized\nat your work.</item>
        <item>Share your views\nabout current tasks.</item>
    </string-array>

    <string name="about_appstore" translatable="false">App Store</string>
    <string name="about_googleplay" translatable="false">Google Play</string>
    <string name="about_web" translatable="false">Web</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="app_name" translatable="false">Noue</string>
    <string name="command_title">Command</string>
    <string name="empty">Nothing yet</string>
    <string name="error_field_required">Please fill out this field</string>
    <string name="error_incorrect_response">Failed to send link</string>
    <string name="error_invalid_email">Check your email address</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_request_email"></string>
    <string name="error_fragment">Oops! something went wrong…</string>
    <string name="intro_start">Start</string>
    <string name="info">Info</string>
    <string name="nav_cards">Projects</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="permission_rationale_accounts">Permission to use of contacts is necessary for autocompletion of email.</string>
    <string name="preference_about_app">About</string>
    <string name="preference_assigned">Assigned</string>
    <string name="preference_default_templates">Use templates</string>
    <string name="preference_default_templates_summary">To automatically add a template to card heading</string>
    <string name="preference_general">General</string>
    <string name="preference_mute">Mute</string>
    <string name="preference_mute_off">Notifications disabled</string>
    <string name="preference_mute_on">Notifications enabled</string>
    <string name="preference_notification">Notifications</string>
    <string name="preference_other">Other</string>
    <string name="preference_reported">Reported</string>
    <string name="preference_template_bug">Fix bug</string>
    <string name="preference_template_enhancement">Enhancement</string>
    <string name="preference_template_message">Automatically added when creating the card</string>
    <string name="preference_template_suggest">Suggest</string>
    <string name="preference_templates">Templates</string>
    <string name="preference_watching">Watching</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_default" translatable="false">Noue</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="soon">Soon</string>
    <string name="projects">Projects</string>
    <string name="shortcut_label_feed_long" translatable="false">shortcut_label_feed_long</string>
    <string name="shortcut_label_feed_short" translatable="false">shortcut_label_feed_short</string>
    <string name="shortcut_label_feed_disabled" translatable="false">shortcut_label_feed_disabled</string>
    <string name="shortcut_label_projects_long" translatable="false">shortcut_label_projects_long</string>
    <string name="shortcut_label_projects_short" translatable="false">shortcut_label_projects_short</string>
    <string name="shortcut_label_projects_disabled" translatable="false">shortcut_label_projects_disabled</string>
</resources>
