<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/preference_general">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:key="preference_mute"
            android:summaryOff="@string/preference_mute_off"
            android:summaryOn="@string/preference_mute_on"
            android:title="@string/preference_mute" />

        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_default_templates"
            android:summary="@string/preference_default_templates_summary"
            android:title="@string/preference_default_templates" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_notification">

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="preference_assigned"
            android:title="@string/preference_assigned" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="preference_reported"
            android:title="@string/preference_reported" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="preference_watching"
            android:title="@string/preference_watching" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_templates">

        <androidx.preference.EditTextPreference
            android:defaultValue="[BUG]"
            android:dialogMessage="@string/preference_template_message"
            android:key="preference_template_bug"
            android:summary="%s"
            android:title="@string/preference_template_bug" />

        <androidx.preference.EditTextPreference
            android:defaultValue="[ENH]"
            android:dialogMessage="@string/preference_template_message"
            android:key="preference_template_enhancement"
            android:summary="%s"
            android:title="@string/preference_template_enhancement" />

        <androidx.preference.EditTextPreference
            android:defaultValue="[SUG]"
            android:dialogMessage="@string/preference_template_message"
            android:key="preference_template_suggest"
            android:summary="%s"
            android:title="@string/preference_template_suggest" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_other">

        <androidx.preference.Preference
            android:key="preference_dummy"
            android:summary=""
            android:title="@string/preference_about_app">

            <intent
                android:targetClass="website.petrov.noue.view.activity.AboutActivity"
                android:targetPackage="website.petrov.noue" />

        </androidx.preference.Preference>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>