<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="p">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_feed"
        android:shortcutDisabledMessage="@string/shortcut_label_feed_disabled"
        android:shortcutId="feed"
        android:shortcutLongLabel="@string/shortcut_label_feed_long"
        android:shortcutShortLabel="@string/shortcut_label_feed_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="website.petrov.noue.MainActivity"
            android:targetPackage="website.petrov.noue">
            <extra
                android:name="SHORTCUT_ID"
                android:value="feed" />
        </intent>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_cards"
        android:shortcutDisabledMessage="@string/shortcut_label_projects_disabled"
        android:shortcutId="projects"
        android:shortcutLongLabel="@string/shortcut_label_projects_long"
        android:shortcutShortLabel="@string/shortcut_label_projects_short">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="website.petrov.noue.MainActivity"
            android:targetPackage="website.petrov.noue">
            <extra
                android:name="SHORTCUT_ID"
                android:value="feed" />
        </intent>
    </shortcut>
</shortcuts>